fix(NewStatementForm): Speakers select z-index

--- a/app/styles/_components/statements.sass
+++ b/app/styles/_components/statements.sass
@@ -88,6 +88,7 @@ $statement-text-color: #e0e7f1
   box-shadow: 0px 3px 15px -3px #b3b3b3
   &.card
     @include animate(fadeInDown, 0.3s)
+    z-index: 9
   .card-header-title
     .button
       margin-right: 10px
